--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "common": "workspace:*",
-    "ts-lib": "workspace:*"
+    "ts-lib": "workspace:*",
+    "marcs-observable": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
