--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf node_modules packages/**/node_modules packages/**/build packages/**/dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "common": "pnpm --filter common",
     "web-app": "pnpm --filter web-app",
+    "common": "pnpm --filter common",
     "ts-lib": "pnpm --filter ts-lib",
-    "vanilla-ts-web-app": "pnpm --filter vanilla-ts-web-app",
-    "clean": "rm -rf node_modules packages/**/node_modules packages/**/build packages/**/dist"
+    "marcs-observable": "pnpm --filter marcs-observable"
   },
   "keywords": [],
   "author": "",
