--- a/packages/marcs-observable/package.json
+++ b/packages/marcs-observable/package.json
@@ -9,13 +9,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest --detectOpenHandles"
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.3",
+    "@vitest/ui": "^1.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
