--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "common": "workspace:*",
     "marcs-observable": "workspace:*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-lib": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
