--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"wsrun --parallel dev\"",
-    "build": "wsrun -s build",
-    "start": "concurrently \"wsrun --parallel start\"",
-    "clean": "rm -rf node_modules packages/**/node_modules packages/**/build packages/**/dist",
+    "dev": "pnpm --filter web-app dev",
+    "build": "pnpm --filter marcs-observable build",
+    "start": "pnpm -r --parallel start",
+    "clean": "rm -rf node_modules packages/**/node_modules packages/**/build packages/**/dist apps/**/node_modules",
     "test": "pnpm --filter marcs-observable test",
     "web-app": "pnpm --filter web-app",
-    "common": "pnpm --filter common",
-    "ts-lib": "pnpm --filter ts-lib",
     "marcs-observable": "pnpm --filter marcs-observable"
   },
   "keywords": [],
@@ -21,9 +19,5 @@
     "node": ">=22.2.0"
   },
   "type": "module",
-  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195",
-  "dependencies": {
-    "concurrently": "^8.2.2",
-    "wsrun": "^5.2.4"
-  }
+  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
