--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bronifty/marcs-observable": "npm:@jsr/bronifty__marcs-observable@^0.1.0",
+    "@bronifty/marcs-observable": "npm:@jsr/bronifty__marcs-observable@^0.1.1",
     "marcs-observable": "workspace:*",
+    "predictionguard": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
