--- a/packages/marcs-observable/package.json
+++ b/packages/marcs-observable/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marcs-observable",
+  "name": "@bronifty/marcs-observable",
   "private": true,
   "version": "1.0.5",
   "type": "module",
