--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-app",
+  "name": "web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bronifty/marcs-observable": "workspace:*",
-    "predictionguard": "^0.3.0",
+    "@bronifty/marcs-observable": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
