--- a/apps/web-app/tsconfig.node.json
+++ b/apps/web-app/tsconfig.node.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types", "./node_modules"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["src/**/*", "vite.config.ts"]
 }
