--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bronifty/marcs-observable": "workspace:*",
+    "@bronifty/marcs-observable": "npm:@jsr/bronifty__marcs-observable@^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
