--- a/apps/web/tsconfig.node.json
+++ b/apps/web/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "typeRoots": ["./node_modules/@types", "./node_modules"]
   },
