--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pnpm-monorepo",
+  "name": "marcs-observable-monorepo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
